# pcview

./: .gitignore  .gitmodules  FileHandler.py  Hub.py  README.adoc  README.md  aeb_view.py  analysis_410.py  analysis_obj_j2_q3_x1j.py  auto_replay_data.py  build.sh  build_run.sh  changelog.adoc  clear.sh  client_cfg.json  client_view.py  config.json  cv22_view.py  cy_release.sh  cy_release_run.sh  debug_view.py  debug_view_fpga_hil.py  debug_view_m3_hil.py  debug_viewer.py  demo.py  dms_draw.py  flow_replay.py  flow_view.py  generate_version.py  hil_test.py  install_dependencies.sh  instruction.md  kill.sh  log_manipulate.py  origin_client.py  pack_exe.sh  pack_pcc.sh  pack_pcc_and_replay.sh  pack_proj.sh  pc-collect.adoc  (+43 more)
assets/: 1.sh  changeIp.sh  getnetId.sh  pc-view-color.sh  pc-view.sh  pcview-byd.desktop  pcview-byd.sh  pcview-close.desktop  pcview-color.desktop  pcview-color.sh  pcview-gray.desktop  pcview-gray.sh  pcview.desktop  pcviewer-close.desktop  pcviewer-color.desktop  pcviewer-unsave.desktop  pcviewer.desktop  rc.local  send_data.py
client/: FileHandler.py  Hub.py  draw.py  file_handler.py  flow_view.py  msg_sink.py  pcview_client.py  pcview_tcp.py  player.py  recorder.py  setup.py  sink_fpga.py  sink_mtk.py  ui.py
config/: .goutputstream-K8DV70  __init__.py  cfg_a1j.json  cfg_aeb_test.json  cfg_aion_lx.json  cfg_can.json  cfg_control.json  cfg_cve_test.json  cfg_d530.json  cfg_default.json  cfg_demo.json  cfg_dftj_guojian.json  cfg_dftj_x1d3.json  (+49 more)
tools/coordinate_trans/: CMakeLists.txt  bird_perspective_mapping.cpp  bird_perspective_mapping.h
(+517 files in other folders)
