CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Trans)

SET(CMAKE_CXX_FLAGS_DEBUG   "-std=c++11 -Wall -g")
SET(CMAKE_CXX_FLAGS_RELEASE "-std=c++11 -Wall -O3")

SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(TESTS_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin/tests")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")

MESSAGE(STATUS "CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  FIND_PACKAGE(OpenCV 3 REQUIRED
    PATHS "/Users/zhangqi/opt/opencv/3.4.2/share"
    NO_DEFAULT_PATH
  )
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  FIND_PACKAGE(OpenCV 3 REQUIRED)
  INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
ENDIF()


ADD_EXECUTABLE(trans
  bird_perspective_mapping.cpp
)

TARGET_LINK_LIBRARIES(trans ${OpenCV_LIBS})
